utworzenie folderu style

--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style/style.css" type="text/css">
 </head>
-<body> 
+
+<body>
     <section>
         <div id="jeden">
-        <h1>Główny tytuł</h1>
+            <h1>Główny tytuł</h1>
         </div>
         <div class="pierwszy">
-        <p>Lorem ipsum dolor sit amet consectetur 
-            adipisicing elit. Numquam ab ea culpa perspiciatis?
-             Repudiandae officiis error eius ex, eum quos 
-             consequatur enim nulla quia ullam quibusdam, 
-             eos, animi excepturi modi.</p>
-         </div>
-         <div id="dwa">
-        <h3>Podtytuł</h3>
+            <p>Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Numquam ab ea culpa perspiciatis?
+                Repudiandae officiis error eius ex, eum quos
+                consequatur enim nulla quia ullam quibusdam,
+                eos, animi excepturi modi.</p>
+        </div>
+        <div id="dwa">
+            <h3>Podtytuł</h3>
         </div>
         <div class="drugi">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing 
-            elit. Eos omnis, aspernatur sed dignissimos
-             soluta nostrum sequi cum ipsa voluptas doloribus
-              provident harum quas quam iusto natus eligendi
-               libero aperiam unde!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit. Eos omnis, aspernatur sed dignissimos
+                soluta nostrum sequi cum ipsa voluptas doloribus
+                provident harum quas quam iusto natus eligendi
+                libero aperiam unde!</p>
         </div>
-        <div id="lista"> 
-             
-         <ol>
-             <li class="item1">item</li>
-             <li class="item2">item</li>
-             <li class="item3">item</li>
-             <li class="item4">item</li>
-             <li class="item5">item</li>
-         </ol> 
-         </div>          
+        <div id="lista">
+
+            <ol>
+                <li class="item1">item</li>
+                <li class="item2">item</li>
+                <li class="item3">item</li>
+                <li class="item4">item</li>
+                <li class="item5">item</li>
+            </ol>
+        </div>
     </section>
-    
+
 </body>
+
 </html>
